@@ -1,12 +1,9 @@
 package com.fincons.security;
 
 import com.fincons.enums.RoleEndpoint;
-import com.fincons.utility.ApplicationUri;
-import com.fincons.jwt.JwtAuthenticationEntryPoint;
+import com.fincons.jwt.JwtUnauthorizedAuthenticationEntryPoint;
 import com.fincons.jwt.JwtAuthenticationFilter;
-
 import com.fincons.utility.Endpoint;
-import lombok.AllArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
@@ -22,8 +19,9 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.web.servlet.config.annotation.CorsRegistry;
+import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
@@ -42,7 +40,7 @@ public class SecurityConfiguration {
     }
 
     @Autowired
-    private  JwtAuthenticationEntryPoint authenticationEntryPoint;
+    private JwtUnauthorizedAuthenticationEntryPoint authenticationExeptionEntryPoint;
 
     @Autowired
     private   JwtAuthenticationFilter jwtAuthFilter;
@@ -84,40 +82,42 @@ public class SecurityConfiguration {
     @Value("${login.base.uri}")
     private String loginBaseUri;
 
-    @Value("${logout.base.uri}")
-    private String logoutBaseUri;
-
     @Value("${error.base.uri}")
     private String errorBaseUri;
 
     @Value("${register.base.uri}")
     private String registerBaseUri;
+    @Value("${delete.user-by-email}")
+    private String deleteUserByEmail;
 
+    @Bean
+    public WebMvcConfigurer corsConfigurer(){
+        return new WebMvcConfigurer() {
+            @Override
+            public void addCorsMappings(CorsRegistry registry) {
+                registry.addMapping("/**").allowedOrigins("http://localhost:3000");
+            }
+        };
+    }
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
 
-        http.cors(AbstractHttpConfigurer::disable);
+
         http.csrf(AbstractHttpConfigurer::disable);
 
-
-
         List<Endpoint> endpoints = Arrays.asList(
-
                 new Endpoint(appContext + roleBaseUri + "/**", Arrays.asList(RoleEndpoint.ADMIN,RoleEndpoint.USER)),
                 new Endpoint(appContext + departmentBaseUri + "/**", Arrays.asList(RoleEndpoint.ADMIN,RoleEndpoint.USER)),
                 new Endpoint(appContext + positionUri + "/**", Arrays.asList(RoleEndpoint.ADMIN,RoleEndpoint.USER)),
                 new Endpoint(appContext + projectBaseUri + "/**", Arrays.asList(RoleEndpoint.ADMIN,RoleEndpoint.USER)),
                 new Endpoint(appContext + fileBaseUri + "/**", Arrays.asList(RoleEndpoint.ADMIN,RoleEndpoint.USER)),
                 new Endpoint(appContext + emailSenderUri + "/**", Arrays.asList(RoleEndpoint.ADMIN,RoleEndpoint.USER)),
-                new Endpoint(appContext + updateUserPassword + "/**", Arrays.asList(RoleEndpoint.ADMIN,RoleEndpoint.USER)),
                 new Endpoint(appContext + employeeBaseUri + "/**", Arrays.asList(RoleEndpoint.ADMIN,RoleEndpoint.USER)),
-                new Endpoint(appContext + registeredUsers, Arrays.asList(RoleEndpoint.ADMIN,RoleEndpoint.USER))
-
-
-        );
+                new Endpoint(appContext + registeredUsers , List.of(RoleEndpoint.ADMIN)),
+                new Endpoint(appContext + deleteUserByEmail + "/**", List.of(RoleEndpoint.ADMIN))
+                );
 
         http.authorizeHttpRequests(authz -> {
-
             for (Endpoint e: endpoints) {
                 if (e.getRoles().contains(RoleEndpoint.ADMIN) && e.getRoles().contains(RoleEndpoint.USER)) {
                     authz.requestMatchers(HttpMethod.GET, e.getPath()).hasAnyRole("ADMIN","USER");
@@ -129,16 +129,16 @@ public class SecurityConfiguration {
                 }
             }
             authz.requestMatchers(appContext + loginBaseUri).permitAll()
-                    .requestMatchers(appContext + logoutBaseUri).permitAll()
                     .requestMatchers(appContext +registerBaseUri).permitAll()
                     .requestMatchers(appContext + errorBaseUri).permitAll()
                     .requestMatchers(appContext + modifyUser).authenticated()
+                    .requestMatchers(appContext + updateUserPassword).authenticated()
                     .anyRequest().authenticated();
         }).httpBasic(Customizer.withDefaults());
 
         http
                 .exceptionHandling(exception -> exception
-                        .authenticationEntryPoint(authenticationEntryPoint));
+                        .authenticationEntryPoint(authenticationExeptionEntryPoint));
 
         http.addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
 
